# tambourineman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_windows.bat
cmake/: tambourinemanConfig.cmake.in
lib/: CMakeLists.txt
lib/cmake/: tbmConfig.cmake.in
lib/include/: json.hpp  protofile.h  protofileloader.h  protomessagehttpclient.h  protomessageserializer.h  tbm_exports.h
lib/src/: protofile.cpp  protofileloader.cpp  protomessagehttpclient.cpp  protomessageserializer.cpp
qt/: CMakeLists.txt  main.cpp  protofileloader.cpp  protofileloader.h  protofileloadermodel.cpp  protofileloadermodel.h  protomessageoperationswidget.cpp  protomessageoperationswidget.h  resources.qrc  tambourineman.conf  tbmmainwindow.cpp  tbmmainwindow.h
qt/icons/: icons.txt
qt/qml/: actions.qml  main.qml  qmldir
test/: CMakeLists.txt
test/data/: addressbook.proto
test/proto_cpp/: addressbook.pb.cc  addressbook.pb.h
test/src/: httpserver.cpp  httpserver.h  main.cpp  prototestutils.cpp  prototestutils.h  test_protofileloader.cpp  test_protomessagehttpclient.cpp  test_protomessageserializer.cpp
